objects/Country__c/fields/Country_Number__c.field-meta.xml
<CustomField>
    <fullName>Country_Number__c</fullName>
    <label>Country Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>