objects/Country__c/fields/National_Flag__c.field-meta.xml
<CustomField>
    <fullName>National_Flag__c</fullName>
    <label>National Flag</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>