objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Code__c</columns>
    <columns>National_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>